<resources>
    <string name="app_name">Achacha</string>
    <string name="bottom_nav_label_todos">Todos</string>
    <string name="bottom_nav_label_accounts">Accounts</string>
    <string name="fab_content_todos_desc">Todos FAB</string>
    <string name="preparing_service">Preparing the service.</string>
    <string name="work">Work</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="tags">Tags</string>
    <string name="tasks">%d Tasks</string>
    <string name="accountCount">%d Accounts</string>
    <string name="created">Created</string>
    <string name="memo">Memo</string>
    <string name="shopping">Shopping</string>
    <string name="call">Call</string>
    <string name="check">Check</string>
    <string name="take">Take</string>
    <string name="email">Email</string>
    <string name="buy">Buy</string>
    <string name="meet">Meet</string>
    <string name="clean">Clean</string>
    <string name="send">Send</string>
    <string name="payment">Payment</string>
    <string name="create">Create</string>
    <string name="select">Select</string>
    <string name="doing">Do</string>
    <string name="read">Read</string>
    <string name="study">Study</string>
    <string name="working">Working</string>
    <string name="completed">Completed</string>
    <string name="error_message_text_input_empty">Enter the work do you want..</string>
    <string name="is_finished">IsFinished</string>
    <string name="required">Required</string>
    <string name="title">Title</string>
    <string name="label">Label</string>
    <string name="subtitle">Subtitle</string>
    <string name="identity">Identity</string>
    <string name="password">Password</string>
    <string name="hint">Hint</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="thumbnail_hint_string">T</string>
    <string name="submit">Submit</string>
    <string name="icon">Icon</string>
    <string name="my_accounts">My Accounts</string>
    <string name="create_account">Create Account</string>
    <string name="ok">OK</string>
    <string name="setting">Setting</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="initialize">Initialize</string>
    <string name="input_window">Input window</string>
    <string name="enter_text">Enter text</string>

    <!--  todo list  -->
    <string name="item_list_is_empty_message">How about create new a %s?</string>


    <!--  authenticate  -->
    <string name="auth_pattern_create">Create new pattern to log-in</string>
    <string name="auth_pattern_forgot">Did you forgot the pattern?</string>
    <string name="auth_use_pattern">Log-in by pattern</string>
    <string name="auth_authenticate">Authenticate</string>
    <string name="auth_authenticate_by_fingerprint">Verify with Fingerprint.</string>
    <string name="auth_pattern_initialize_message_title">Initialize Pattern.</string>
    <string name="auth_pattern_initialize_message_subtitle">When press \'AGREE\' button, all stored information is deleted. Would you like to proceed?</string>

    <!--  permissions  -->
    <string name="permission_required_message_storage">Need permission about device media storage.</string>
    <string name="permission_required_message_storage_ko">기기의 사진 및 미디어에 대한 권한이 필요합니다.</string>
    <string name="permission_available_message">App may not run normally(No permission).</string>
    <string name="permission_available_message_ko">권한이 없어 앱이 정상적으로 실행하지 않을 수 있습니다.</string>
    <string name="permission_granted">Permission granted.</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="save">Save</string>
    <string name="finish">Finish</string>
    <string name="remove">Remove</string>
    <string name="modify">Modify</string>
    <string name="input">Input</string>

    <!--  integers  -->
    <integer name="animation_duration_short">300</integer>
    <integer name="animation_duration_default">1000</integer>
</resources>