<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.codeliner.achacha.ui.accounts.create.AccountCreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/bodyScroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bodyContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideStart"
                    app:layout_constraintGuide_begin="@dimen/spacing_m"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideEnd"
                    app:layout_constraintGuide_end="@dimen/spacing_m"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideTop"
                    app:layout_constraintGuide_begin="@dimen/spacing_m"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/thumbnailContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintTop_toTopOf="@id/guideTop">

                    <ImageView
                        android:id="@+id/thumbnailImage"
                        android:background="@drawable/border_circle"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:alpha="0.6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/thumbnailText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thumbnail_hint_string"
                        android:textSize="@dimen/text_4xl"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:hint="@string/title"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintTop_toBottomOf="@+id/thumbnailContainer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/subtitleContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:hint="@string/subtitle"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintTop_toBottomOf="@+id/titleContainer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/subtitleValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:hint="@string/username"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintTop_toBottomOf="@+id/subtitleContainer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:hint="@string/password"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintTop_toBottomOf="@+id/usernameContainer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hintContainer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_m"
                    android:hint="@string/hint"
                    app:layout_constraintStart_toStartOf="@id/guideStart"
                    app:layout_constraintEnd_toEndOf="@id/guideEnd"
                    app:layout_constraintTop_toBottomOf="@+id/passwordContainer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/hintValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>